@@ -41,6 +41,20 @@
 
 #define MAXPATH	200		/* max length for entire name */
 
+#include <fcntl.h>
+#include <sys/stat.h>
+
+/* In view of DOS portability, we may need the vale of the O_BINARY
+ * bit mask. On Unix platforms, it's not defined, nor is it needed -->
+ * set it to a no-op value */
+#ifndef O_BINARY
+# ifdef _O_BINARY
+#  define O_BINARY _O_BINARY
+# else
+#  define O_BINARY 0x00
+# endif
+#endif 
+
 #if !NOMALLOC
 extern	char	**vpdirs;	/* directories (including current) in view path */
 #else
@@ -51,3 +65,5 @@ extern	char	vpdirs[MAXDIR][DIRLEN + 1];
 extern	int	vpndirs;	/* number of directories in view path */
 
 void	vpinit(char *currentdir);
+int	vpopen(char *path, int oflag);
+int	vpaccess(char *path, mode_t amode);
